adding a new dialog showing 3 new apps and their icons

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -646,6 +646,7 @@
             فقط لإخبارك أنه تم إصدار تطبيق جديد مؤخراً:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             يمكنك تنزيله بالضغط على العنوان.<br><br>
             شكراً
         ]]>
