--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -615,6 +615,7 @@
             告訴你最近有一個新的應用程式剛發布:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             點標題下載來試試看吧<br><br>
             謝謝
         ]]>
