--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -648,6 +648,7 @@
             només informar-te que una nova aplicació s\'ha publicat recentment:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Pots descarregar-la prement el títol.<br><br>
             Gràcies
         ]]>
