--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -648,6 +648,7 @@
             nur eine kleine Info zu einer neu veröffentlichten App:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Du kannst sie durch Drücken auf den Namen herunterladen.<br><br>
             Danke
         ]]>
