--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -648,6 +648,7 @@
             halusin vain kertoa että uusi sovellus on julkaistu:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Voit ladata sen koskettamalla otsikkoa.<br><br>
             Kiitos!
         ]]>
