--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -650,6 +650,7 @@
             Une nouvelle application a été publiée récemment :<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Vous pouvez la télécharger en appuyant sur le titre.<br><br>
             Merci
         ]]>
