--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -648,6 +648,7 @@
             solo te informamos que recientemente se ha lanzado una nueva aplicación:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Puedes descargarla presionando el título.<br><br>
             Gracias
         ]]>
