--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -679,6 +679,7 @@
             samo da te obavijestim da je nova aplikacija nedavno objavljena:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Možeš je preuzeti pritiskom na naslov.<br><br>
             Hvala
         ]]>
