--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -648,6 +648,7 @@
             Er is recentelijk een nieuwe app uitgebracht:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Download de app door op de naam hierboven te klikken.<br><br>
             Dank u wel!
         ]]>
