--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -677,6 +677,7 @@
             Dajemy Ci znać, że ostatnio wyszła nowa aplikacja:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Możesz ją pobrać, klikając powyższy odnośnik.<br><br>
             Dziękujemy!
         ]]>
