--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -648,6 +648,7 @@
             Gostariamos de avisar que lançamos um novo app recentemente:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Você pode baixá-lo pressionando o título.<br><br>
             Obrigado
         ]]>
