--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -682,6 +682,7 @@
             просто сообщаю, что недавно было выпущено новое приложение:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Вы можете скачать его, нажав на заголовок.<br><br>
             Спасибо
         ]]>
