--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -648,6 +648,7 @@
             chỉ cho bạn biết rằng một ứng dụng mới đã được phát hành gần đây:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
+            <a href="%5$s">%6$s</a><br><br>
             Bạn có thể tải xuống bằng cách nhấn vào tiêu đề.<br><br>
             Thanks
         ]]>
