--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -645,7 +645,7 @@
     <string name="new_app">
         <![CDATA[
             Hallo,<br><br>
-            Er is recentelijk een nieuwe app uitgebracht:<br><br>
+            Er zijn recentelijk nieuwe apps uitgebracht:<br><br>
             <a href="%1$s">%2$s</a><br><br>
             <a href="%3$s">%4$s</a><br><br>
             <a href="%5$s">%6$s</a><br><br>
