updating the slovak apps translation

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -688,22 +688,22 @@
         ]]>
     </string>
 
-    <string name="simple_app_launcher">Simple App Launcher</string>
-    <string name="simple_calculator">Simple Calculator</string>
-    <string name="simple_calendar">Simple Calendar</string>
-    <string name="simple_camera">Simple Camera</string>
-    <string name="simple_clock">Simple Clock</string>
-    <string name="simple_contacts">Simple Contacts</string>
-    <string name="simple_dialer">Simple Dialer</string>
-    <string name="simple_draw">Simple Draw</string>
-    <string name="simple_file_manager">Simple File Manager</string>
-    <string name="simple_flashlight">Simple Flashlight</string>
-    <string name="simple_gallery">Simple Gallery</string>
-    <string name="simple_music_player">Simple Music Player</string>
-    <string name="simple_notes">Simple Notes</string>
-    <string name="simple_sms_messenger">Simple SMS Messenger</string>
-    <string name="simple_thank_you">Simple Thank You</string>
-    <string name="simple_voice_recorder">Simple Voice Recorder</string>
+    <string name="simple_app_launcher">Jednoduchý spúšťač aplikácií</string>
+    <string name="simple_calculator">Jednoduchá kalkulačka</string>
+    <string name="simple_calendar">Jednoduchý kalendár</string>
+    <string name="simple_camera">Jednoduchý fotoaparát</string>
+    <string name="simple_clock">Jednoduché hodinky</string>
+    <string name="simple_contacts">Jednoduché kontakty</string>
+    <string name="simple_dialer">Jednoduchý telefón</string>
+    <string name="simple_draw">Jednoduché kreslenie</string>
+    <string name="simple_file_manager">Jednoduchý správca súborov</string>
+    <string name="simple_flashlight">Jednoduchá baterka</string>
+    <string name="simple_gallery">Jednoduchá galéria</string>
+    <string name="simple_music_player">Jednoduchý hudobný prehrávač</string>
+    <string name="simple_notes">Jednoduché poznámky</string>
+    <string name="simple_sms_messenger">Jednoduché SMS správy</string>
+    <string name="simple_thank_you">Jednoduché ďakujem</string>
+    <string name="simple_voice_recorder">Jednoduchý nahrávač zvuku</string>
 
     <string name="sideloaded_app">
         <![CDATA[
