--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -222,7 +222,7 @@
     <string name="share_colors_success">Kleuren gewijzigd. Gebruik het nieuwe thema \'Gedeeld\' om de kleuren voor al onze apps aan te passen.</string>
     <string name="purchase_thank_you">
         <![CDATA[
-            Om deze functie te gebruiken en om verdere ontwikkeling te ondersteunen kunt u <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> aanschaffen. Alvast bedankt!
+            Om deze functie te gebruiken en om verdere ontwikkeling te ondersteunen kunt u <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Eenvoudig Bedankje</a> aanschaffen. Alvast bedankt!
         ]]>
     </string>
 
@@ -463,7 +463,7 @@
 
     <!-- Settings -->
     <string name="settings">Instellingen</string>
-    <string name="purchase_simple_thank_you">Simple Thank You kopen</string>
+    <string name="purchase_simple_thank_you">Eenvoudig Bedankje kopen</string>
     <string name="customize_colors">Kleuren aanpassen</string>
     <string name="customize_widget_colors">Kleuren voor widget aanpassen</string>
     <string name="use_english_language">Use English language</string>
@@ -626,12 +626,12 @@
     <string name="donate_please">
         <![CDATA[
             Hallo,<br><br>
-            Hopelijk vindt u dit een fijne app. Het bevat geen advertenties, maar u kunt de verdere ontwikkeling wel ondersteunen door de app <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Simple Thank You</a> aan te schaffen. Dit zal ook voorkomen dat dit venster nog eens verschijnt.<br><br>
+            Hopelijk vindt u dit een fijne app. Het bevat geen advertenties, maar u kunt de verdere ontwikkeling wel ondersteunen door de app <a href="https://play.google.com/store/apps/details?id=com.simplemobiletools.thankyou">Eenvoudig Bedankje</a> aan te schaffen. Dit zal ook voorkomen dat dit venster nog eens verschijnt.<br><br>
             Dank u wel!
         ]]>
     </string>
     <string name="purchase">Kopen</string>
-    <string name="update_thank_you">Er is een nieuwe versie van Simple Thank You</string>
+    <string name="update_thank_you">Er is een nieuwe versie van Eenvoudig Bedankje</string>
     <string name="before_asking_question_read_faq">Controleer bij problemen eerst de instellingen van de app en neem de Veelgestelde vragen door. Wellicht is de oplossing daar reeds te vinden.</string>
     <string name="before_rate_read_faq">Neem de Veelgestelde vragen en de instellingen van de app even door voordat u ons een beoordeling geeft. Wellicht is de oplossing daar reeds te vinden.</string>
     <string name="make_sure_latest">Zorg er ook voor dat de laatste versie van de app is geïnstalleerd.</string>
@@ -654,22 +654,22 @@
         ]]>
     </string>
 
-    <string name="simple_app_launcher">Simple App Launcher</string>
-    <string name="simple_calculator">Simple Calculator</string>
-    <string name="simple_calendar">Simple Calendar</string>
-    <string name="simple_camera">Simple Camera</string>
-    <string name="simple_clock">Simple Clock</string>
-    <string name="simple_contacts">Simple Contacts</string>
-    <string name="simple_dialer">Simple Dialer</string>
-    <string name="simple_draw">Simple Draw</string>
-    <string name="simple_file_manager">Simple File Manager</string>
-    <string name="simple_flashlight">Simple Flashlight</string>
-    <string name="simple_gallery">Simple Gallery</string>
-    <string name="simple_music_player">Simple Music Player</string>
-    <string name="simple_notes">Simple Notes</string>
-    <string name="simple_sms_messenger">Simple SMS Messenger</string>
-    <string name="simple_thank_you">Simple Thank You</string>
-    <string name="simple_voice_recorder">Simple Voice Recorder</string>
+    <string name="simple_app_launcher">Eenvoudige App Launcher</string>
+    <string name="simple_calculator">Eenvoudige Rekenmachine</string>
+    <string name="simple_calendar">Eenvoudige Agenda</string>
+    <string name="simple_camera">Eenvoudige Camera</string>
+    <string name="simple_clock">Eenvoudige Klok</string>
+    <string name="simple_contacts">Eenvoudig Adresboek</string>
+    <string name="simple_dialer">Eenvoudige Telefoon</string>
+    <string name="simple_draw">Eenvoudig Tekenen</string>
+    <string name="simple_file_manager">Eenvoudig Bestandsbeheer</string>
+    <string name="simple_flashlight">Eenvoudige Zaklamp</string>
+    <string name="simple_gallery">Eenvoudige Galerij</string>
+    <string name="simple_music_player">Eenvoudige Muziekspeler</string>
+    <string name="simple_notes">Eenvoudige Notities</string>
+    <string name="simple_sms_messenger">Eenvoudig Berichtenbeheer (SMS)</string>
+    <string name="simple_thank_you">Eenvoudig Bedankje</string>
+    <string name="simple_voice_recorder">Eenvoudige Voicerecorder</string>
 
     <string name="sideloaded_app">
         <![CDATA[
