--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -660,7 +660,7 @@
     <string name="simple_camera">Simple Camera</string>
     <string name="simple_clock">Simple Clock</string>
     <string name="simple_contacts">Simple Contacts</string>
-    <string name="simple_dialer">Simple Dialer</string>
+    <string name="simple_dialer">Απλή Κλήση</string>
     <string name="simple_draw">Simple Draw</string>
     <string name="simple_file_manager">Simple File Manager</string>
     <string name="simple_flashlight">Simple Flashlight</string>
