--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -660,7 +660,7 @@
     <string name="simple_camera">Απλή Κάμερα</string>
     <string name="simple_clock">Απλό Ρολόι</string>
     <string name="simple_contacts">Απλές Επαφές</string>
-    <string name="simple_dialer">Simple Dialer</string>
+    <string name="simple_dialer">Απλή Κλήση</string>
     <string name="simple_draw">Απλή Ζωγραφική</string>
     <string name="simple_file_manager">Απλός Διαχειριστής Αρχείων</string>
     <string name="simple_flashlight">Απλός Φακός</string>
@@ -669,7 +669,7 @@
     <string name="simple_notes">Απλές Σημειώσεις</string>
     <string name="simple_sms_messenger">Απλός SMS Messenger</string>
     <string name="simple_thank_you">Απλά Σας ευχαριστούμε</string>
-    <string name="simple_voice_recorder">Simple Voice Recorder</string>
+    <string name="simple_voice_recorder">Απλή Εγγραφή Φωνής</string>
 
     <string name="sideloaded_app">
         <![CDATA[
