--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -510,6 +510,14 @@
     <string name="text">Texte</string>
     <string name="migrating">Migration</string>
 
+    <!-- Default tabs to open -->
+    <string name="default_tab_to_open">Tab to open at app start</string>
+    <string name="contacts_tab">Contacts</string>
+    <string name="favorites_tab">Favorites</string>
+    <string name="call_history_tab">Call History</string>
+    <string name="groups_tab">Groups</string>
+    <string name="last_used_tab">Last used one</string>
+
     <!-- Recycle Bin -->
     <string name="restore_this_file">Restaurer ce fichier</string>
     <string name="restore_selected_files">Restaurer les fichiers sélectionnés</string>
