--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -509,12 +509,12 @@
     <string name="migrating">Migreren</string>
 
     <!-- Default tabs to open -->
-    <string name="default_tab_to_open">Tab to open at app start</string>
-    <string name="contacts_tab">Contacts</string>
-    <string name="favorites_tab">Favorites</string>
-    <string name="call_history_tab">Call History</string>
-    <string name="groups_tab">Groups</string>
-    <string name="last_used_tab">Last used one</string>
+    <string name="default_tab_to_open">Tab openen bij opstarten</string>
+    <string name="contacts_tab">Contacten</string>
+    <string name="favorites_tab">Favorieten</string>
+    <string name="call_history_tab">Oproepgeschiedenis</string>
+    <string name="groups_tab">Groepen</string>
+    <string name="last_used_tab">Laatst gebruikt</string>
 
     <!-- Recycle Bin -->
     <string name="restore_this_file">Bestand herstellen</string>
