escaping some apostrophes

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -511,10 +511,10 @@
     <string name="migrating">Migration</string>
 
     <!-- Default tabs to open -->
-    <string name="default_tab_to_open">Onglet à ouvrir au démarrage de l'application</string>
+    <string name="default_tab_to_open">Onglet à ouvrir au démarrage de l\'application</string>
     <string name="contacts_tab">Contacts</string>
     <string name="favorites_tab">Favoris</string>
-    <string name="call_history_tab">Historique d'appels</string>
+    <string name="call_history_tab">Historique d\'appels</string>
     <string name="groups_tab">Groupes</string>
     <string name="last_used_tab">Le dernier ouvert</string>
 
