adding the short app name versions too

--- a/commons/src/main/res/values-ar/strings.xml
+++ b/commons/src/main/res/values-ar/strings.xml
@@ -677,6 +677,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">الحاسبة</string>
+    <string name="calendar_short">التقويم</string>
+    <string name="camera_short">الكاميرا</string>
+    <string name="clock_short">الساعة</string>
+    <string name="contacts_short">جهات الإتصال</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">الرسام</string>
+    <string name="file_manager_short">مدير الملفات</string>
+    <string name="flashlight_short">المصباح</string>
+    <string name="gallery_short">الاستديو</string>
+    <string name="music_player_short">مشغل الموسيقى</string>
+    <string name="notes_short">الملاحظات</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Thank You</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
 يبدو أن إصدار التطبيق تالف. يرجى تنزيل الإصدار الأصلي<a href="%s">من هنا</a>.
