--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Eenvoudig Bedankje</string>
     <string name="simple_voice_recorder">Eenvoudige Voicerecorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Rekenmachine</string>
+    <string name="calendar_short">Agenda</string>
+    <string name="camera_short">Camera</string>
+    <string name="clock_short">Klok</string>
+    <string name="contacts_short">Contacten</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Tekenen</string>
+    <string name="file_manager_short">Bestandsbeheer</string>
+    <string name="flashlight_short">Zaklamp</string>
+    <string name="gallery_short">Galerij</string>
+    <string name="music_player_short">Muziekspeler</string>
+    <string name="notes_short">Notities</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Bedankt!</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Het lijkt erop dat deze versie van de app corrupt is. Download de originele versie <a href="%s">hier</a>.
