--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -713,6 +713,23 @@
     <string name="simple_thank_you">Jednoduché ďakujem</string>
     <string name="simple_voice_recorder">Jednoduchý nahrávač zvuku</string>
 
+    <string name="app_launcher_short">Spúšťač aplikácií</string>
+    <string name="calculator_short">Kalkulačka</string>
+    <string name="calendar_short">Kalendár</string>
+    <string name="camera_short">Kamera</string>
+    <string name="clock_short">Hodinky</string>
+    <string name="contacts_short">Kontakty</string>
+    <string name="dialer_short">Telefón</string>
+    <string name="draw_short">Kreslenie</string>
+    <string name="file_manager_short">Správca súborov</string>
+    <string name="flashlight_short">Batéria</string>
+    <string name="gallery_short">Galéria</string>
+    <string name="music_player_short">Hudobný prehrávač</string>
+    <string name="notes_short">Poznámky</string>
+    <string name="sms_messenger_short">SMS správy</string>
+    <string name="thank_you_short">Ďakujem</string>
+    <string name="voice_recorder_short">Nahrávač zvuku</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Zdá sa, že vaša verzia apky je poškodená. Prosím stiahnite originálnu verziu <a href="%s">odtiaľ</a>.
