--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Hesap Makinesi</string>
+    <string name="calendar_short">Takvim</string>
+    <string name="camera_short">Kamera</string>
+    <string name="clock_short">Saat</string>
+    <string name="contacts_short">Kişiler</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Çizim</string>
+    <string name="file_manager_short">Dosya Yöneticisi</string>
+    <string name="flashlight_short">Fener</string>
+    <string name="gallery_short">Galeri</string>
+    <string name="music_player_short">Müzik Çalar</string>
+    <string name="notes_short">Notlar</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Teşekkürler</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Uygulama sürümünüz bozuk görünüyor. Lütfen <a href="%s">buradan</a> orijinal sürümünü indirin.
