--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Kalkulyator</string>
+    <string name="calendar_short">Təqvim</string>
+    <string name="camera_short">Kamera</string>
+    <string name="clock_short">Saat</string>
+    <string name="contacts_short">Kontaktlar</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Çək</string>
+    <string name="file_manager_short">Fayl Meneceri</string>
+    <string name="flashlight_short">Fənər</string>
+    <string name="gallery_short">Qalereya</string>
+    <string name="music_player_short">Musiqi Çalar</string>
+    <string name="notes_short">Qeydlər</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Təşəkkürlər</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
