--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -713,6 +713,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Kalkulačka</string>
+    <string name="calendar_short">Kalendář</string>
+    <string name="camera_short">Fotoaparát</string>
+    <string name="clock_short">Hodiny</string>
+    <string name="contacts_short">Kontakty</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Kreslení</string>
+    <string name="file_manager_short">Správce souborů</string>
+    <string name="flashlight_short">Svítilna</string>
+    <string name="gallery_short">Galerie</string>
+    <string name="music_player_short">Hudební přehrávač</string>
+    <string name="notes_short">Poznámky</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Děkuji</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Zdá se, že vaše verze aplikace je poškozená. Prosím stáhněte originální verzi <a href="%s">zde</a>.
