--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Rechner</string>
+    <string name="calendar_short">Kalender</string>
+    <string name="camera_short">Kamera</string>
+    <string name="clock_short">Uhr</string>
+    <string name="contacts_short">Kontakte</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Zeichenblock</string>
+    <string name="file_manager_short">Dateimanager</string>
+    <string name="flashlight_short">Taschenlampe</string>
+    <string name="gallery_short">Galerie</string>
+    <string name="music_player_short">Musik-Player</string>
+    <string name="notes_short">Notizblock</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Dankeschön</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Deine App-Version scheint beschädigt zu sein. Bitte lade dir die originale Version von <a href="%s">hier</a> herunter.
