--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Απλά Σας ευχαριστούμε</string>
     <string name="simple_voice_recorder">Απλή Εγγραφή Φωνής</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Αριθμομηχανή</string>
+    <string name="calendar_short">Ημερολόγιο</string>
+    <string name="camera_short">Κάμερα</string>
+    <string name="clock_short">Ρολόι</string>
+    <string name="contacts_short">Επαφές</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Ζωγραφική</string>
+    <string name="file_manager_short">Αρχεία</string>
+    <string name="flashlight_short">Φακός</string>
+    <string name="gallery_short">Συλλογή</string>
+    <string name="music_player_short">Μουσική</string>
+    <string name="notes_short">Σημειώσεις</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Σας ευχαριστώ</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Φαίνεται ότι η έκδοση της εφαρμογής σας είναι κατεστραμμένη. Κατεβάστε την αρχική έκδοση από <a href="%s">εδώ</a>.
