--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Calculadora</string>
+    <string name="calendar_short">Calendario</string>
+    <string name="camera_short">Cámara</string>
+    <string name="clock_short">Reloj</string>
+    <string name="contacts_short">Contactos</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Dibujo</string>
+    <string name="file_manager_short">Administrador de archivos</string>
+    <string name="flashlight_short">Linterna</string>
+    <string name="gallery_short">Galería</string>
+    <string name="music_player_short">Reproductor de música</string>
+    <string name="notes_short">Notas</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Thank You</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Parece que la versión de tu aplicación está dañada. Por favor descargue la versión original <a href="%s">aquí</a>.
