--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -681,6 +681,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Calculatrice</string>
+    <string name="calendar_short">Calendrier</string>
+    <string name="camera_short">Caméra</string>
+    <string name="clock_short">Horloge</string>
+    <string name="contacts_short">Contacts</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Dessiner</string>
+    <string name="file_manager_short">Gestionnaire de Fichiers</string>
+    <string name="flashlight_short">Lampe de Poche</string>
+    <string name="gallery_short">Galerie</string>
+    <string name="music_player_short">Lecteur de Musique</string>
+    <string name="notes_short">Notes</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Merci</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             La version de votre application semble corrompue. Merci de télécharger la version originale <a href="%s">ici</a>.
