--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -710,6 +710,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Kalkulator</string>
+    <string name="calendar_short">Kalendar</string>
+    <string name="camera_short">Kamera</string>
+    <string name="clock_short">Sat</string>
+    <string name="contacts_short">Kontakti</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Crtaj</string>
+    <string name="file_manager_short">Upravitelj datoteka</string>
+    <string name="flashlight_short">Bljeskalica</string>
+    <string name="gallery_short">Galerija</string>
+    <string name="music_player_short">Glazbeni svirač</string>
+    <string name="notes_short">Bilješke</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Hvala Vam</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
