--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Calcolatrice</string>
+    <string name="calendar_short">Calendario</string>
+    <string name="camera_short">Fotocamera</string>
+    <string name="clock_short">Orologio</string>
+    <string name="contacts_short">Contatti</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Disegna</string>
+    <string name="file_manager_short">Gestore dei file</string>
+    <string name="flashlight_short">Torcia</string>
+    <string name="gallery_short">Galleria</string>
+    <string name="music_player_short">Riproduttore musicale</string>
+    <string name="notes_short">Note</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Ringraziamento</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
         Sembra che la propria versione sia corrotta. Scaricare la versione originale <a href="%s">qui</a>.
