--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -646,6 +646,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">電卓</string>
+    <string name="calendar_short">カレンダー</string>
+    <string name="camera_short">カメラ</string>
+    <string name="clock_short">時計</string>
+    <string name="contacts_short">連絡先</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">ドロー</string>
+    <string name="file_manager_short">ファイルマネージャー</string>
+    <string name="flashlight_short">フラッシュライト</string>
+    <string name="gallery_short">ギャラリー</string>
+    <string name="music_player_short">ミュージックプレイヤー</string>
+    <string name="notes_short">メモ</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Thank You</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
