--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -703,6 +703,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Skaičiuotuvas</string>
+    <string name="calendar_short">Kalendorius</string>
+    <string name="camera_short">Fotoaparatas</string>
+    <string name="clock_short">Laikrodis</string>
+    <string name="contacts_short">Kontaktai</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Piešimas</string>
+    <string name="file_manager_short">Bylų tvarkyklė</string>
+    <string name="flashlight_short">Žibintuvėlis</string>
+    <string name="gallery_short">Galerija</string>
+    <string name="music_player_short">Muzikos grotuvas</string>
+    <string name="notes_short">Užrašai</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Ačiū</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
