--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -708,6 +708,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Kalkulator</string>
+    <string name="calendar_short">Kalendarz</string>
+    <string name="camera_short">Aparat</string>
+    <string name="clock_short">Clock</string>
+    <string name="contacts_short">Contacts</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Szkicownik</string>
+    <string name="file_manager_short">Menedżer Plików</string>
+    <string name="flashlight_short">Latarka</string>
+    <string name="gallery_short">Galeria</string>
+    <string name="music_player_short">Odtwarzacz Muzyki</string>
+    <string name="notes_short">Notatki</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Thank You</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Zdaje się, że Twoja wersja aplikacji jest uszkodzona / zmodyfikowana. Pobierz <a href="%s">stąd</a> oryginalną wersję.
