--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -713,6 +713,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Калькулятор</string>
+    <string name="calendar_short">Календарь</string>
+    <string name="camera_short">Камера</string>
+    <string name="clock_short">Clock</string>
+    <string name="contacts_short">Контакты</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Рисунки</string>
+    <string name="file_manager_short">Файловый менеджер</string>
+    <string name="flashlight_short">Фонарик</string>
+    <string name="gallery_short">Галерея</string>
+    <string name="music_player_short">Проигрыватель музыки</string>
+    <string name="notes_short">Заметки</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Спасибо</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Похоже, ваша версия приложения повреждена. Пожалуйста, скачайте оригинальную версию <a href="%s">отсюда</a>.
