--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -679,6 +679,23 @@
     <string name="simple_thank_you">Simple Thank You</string>
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
+    <string name="app_launcher_short">App Launcher</string>
+    <string name="calculator_short">Калькулятор</string>
+    <string name="calendar_short">Календар</string>
+    <string name="camera_short">Камера</string>
+    <string name="clock_short">Годинник</string>
+    <string name="contacts_short">Контакти</string>
+    <string name="dialer_short">Dialer</string>
+    <string name="draw_short">Малювання</string>
+    <string name="file_manager_short">Менеджер Файлів</string>
+    <string name="flashlight_short">Ліхтарик</string>
+    <string name="gallery_short">Галерея</string>
+    <string name="music_player_short">Музичний Програвач</string>
+    <string name="notes_short">Нотатник</string>
+    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="thank_you_short">Подяка</string>
+    <string name="voice_recorder_short">Voice Recorder</string>
+
     <string name="sideloaded_app">
         <![CDATA[
             Схоже, що ваша версія додатка пошкоджена. Будь ласка, завантажте оригінальну версію <a href="%s">тут</a>.
