--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -685,16 +685,16 @@
     <string name="camera_short">Camera</string>
     <string name="clock_short">Klok</string>
     <string name="contacts_short">Contacten</string>
-    <string name="dialer_short">Dialer</string>
+    <string name="dialer_short">Telefoon</string>
     <string name="draw_short">Tekenen</string>
     <string name="file_manager_short">Bestandsbeheer</string>
     <string name="flashlight_short">Zaklamp</string>
     <string name="gallery_short">Galerij</string>
-    <string name="music_player_short">Muziekspeler</string>
+    <string name="music_player_short">Muziek</string>
     <string name="notes_short">Notities</string>
-    <string name="sms_messenger_short">SMS Messenger</string>
+    <string name="sms_messenger_short">Berichten</string>
     <string name="thank_you_short">Bedankt!</string>
-    <string name="voice_recorder_short">Voice Recorder</string>
+    <string name="voice_recorder_short">Voicerecorder</string>
 
     <string name="sideloaded_app">
         <![CDATA[
