--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -680,18 +680,18 @@
     <string name="simple_voice_recorder">Simple Voice Recorder</string>
 
     <string name="app_launcher_short">App Launcher</string>
-    <string name="calculator_short">Calculator</string>
-    <string name="calendar_short">Calendar</string>
-    <string name="camera_short">Camera</string>
-    <string name="clock_short">Clock</string>
-    <string name="contacts_short">Contacts</string>
+    <string name="calculator_short">Calculadora</string>
+    <string name="calendar_short">Calendário</string>
+    <string name="camera_short">Câmara</string>
+    <string name="clock_short">Relógio</string>
+    <string name="contacts_short">Contactos</string>
     <string name="dialer_short">Dialer</string>
-    <string name="draw_short">Draw</string>
-    <string name="file_manager_short">File Manager</string>
-    <string name="flashlight_short">Flashlight</string>
-    <string name="gallery_short">Gallery</string>
-    <string name="music_player_short">Music Player</string>
-    <string name="notes_short">Notes</string>
+    <string name="draw_short">Desenho</string>
+    <string name="file_manager_short">Gestor de ficheiros</string>
+    <string name="flashlight_short">Lanterna</string>
+    <string name="gallery_short">Galeria</string>
+    <string name="music_player_short">Reprodutor de músicas</string>
+    <string name="notes_short">Notas</string>
     <string name="sms_messenger_short">SMS Messenger</string>
     <string name="thank_you_short">Thank You</string>
     <string name="voice_recorder_short">Voice Recorder</string>
