adding a new string for starting name with surname

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -529,6 +529,7 @@
     <string name="import_settings">Import nastavení</string>
     <string name="settings_exported_successfully">Nastavení bylo úspěšně exportováno</string>
     <string name="settings_imported_successfully">Nastavení bylo úspěšně importováno</string>
+    <string name="start_name_with_surname">Nejprve příjmení</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditelnost</string>
