--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -495,6 +495,7 @@
     <string name="import_settings">Beállítások importálása</string>
     <string name="settings_exported_successfully">A beállítások exportálása sikerült</string>
     <string name="settings_imported_successfully">A beállítások importálása sikerült</string>
+    <string name="start_name_with_surname">Vezetéknév, keresztnév sorrend</string>
 
     <!-- Setting sections -->
     <string name="visibility">Láthatóság</string>
