--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -464,6 +464,7 @@
     <string name="import_settings">設定をインポート</string>
     <string name="settings_exported_successfully">設定は正常にエクスポートされました</string>
     <string name="settings_imported_successfully">設定は正常にインポートされました</string>
+    <string name="start_name_with_surname">姓を先に表示</string>
 
     <!-- Setting sections -->
     <string name="visibility">表示・非表示</string>
