--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Instellingen importeren</string>
     <string name="settings_exported_successfully">Instellingen geëxporteerd</string>
     <string name="settings_imported_successfully">Instellingen geïmporteerd</string>
+    <string name="start_name_with_surname">Beginnen met achternaam</string>
 
     <!-- Setting sections -->
     <string name="visibility">Opmaak</string>
