--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -464,6 +464,7 @@
     <string name="import_settings">导入设置</string>
     <string name="settings_exported_successfully">设置导出成功</string>
     <string name="settings_imported_successfully">设置导入成功</string>
+    <string name="start_name_with_surname">姓氏在前</string>
 
     <!-- Setting sections -->
     <string name="visibility">可见度</string>
