--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Importar ajustaments</string>
     <string name="settings_exported_successfully">Ajustaments exportats correctament</string>
     <string name="settings_imported_successfully">Ajustaments importats correctament</string>
+    <string name="start_name_with_surname">Start name with surname</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilitat</string>
