--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -620,6 +620,7 @@
     <string name="import_settings">Mewnforio gosodiadau</string>
     <string name="settings_exported_successfully">Allforiwyd gosodiadau yn llwyddiannus</string>
     <string name="settings_imported_successfully">Mewnforiwyd gosodiadau yn llwyddiannus</string>
+    <string name="start_name_with_surname">Dangos enw gyda\'r cyfenw gyntaf</string>
 
     <!-- Setting sections -->
     <string name="visibility">Gweladwyedd</string>
