--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Importer indstillinger</string>
     <string name="settings_exported_successfully">Indstillinger eksporteret</string>
     <string name="settings_imported_successfully">Indstillinger importeret</string>
+    <string name="start_name_with_surname">Start navn med efternavn</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighed</string>
