--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Einstellungen importieren</string>
     <string name="settings_exported_successfully">Einstellungen erfolgreich exportiert</string>
     <string name="settings_imported_successfully">Einstellungen erfolgreich importiert</string>
+    <string name="start_name_with_surname">Namen mit Nachnamen beginnen</string>
 
     <!-- Setting sections -->
     <string name="visibility">Sichtbarkeit</string>
