--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Importar ajustes</string>
     <string name="settings_exported_successfully">Ajustes exportados correctamente</string>
     <string name="settings_imported_successfully">Ajustes importados correctamente</string>
+    <string name="start_name_with_surname">Mostrar nombre por apellido</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilidad</string>
