--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -498,6 +498,7 @@
     <string name="import_settings">Importer les paramètres</string>
     <string name="settings_exported_successfully">Paramètres exportés avec succès</string>
     <string name="settings_imported_successfully">Paramètres importés avec succès</string>
+    <string name="start_name_with_surname">Trier les contacts par nom de famille</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilité</string>
