--- a/commons/src/main/res/values-in/strings.xml
+++ b/commons/src/main/res/values-in/strings.xml
@@ -464,6 +464,7 @@
     <string name="import_settings">Impor pengaturan</string>
     <string name="settings_exported_successfully">Pengaturan berhail diekspor</string>
     <string name="settings_imported_successfully">Pengaturan berhail diimpor</string>
+    <string name="start_name_with_surname">Nama dimulai dengan nama belakang</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilitas</string>
