--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Importa impostazioni</string>
     <string name="settings_exported_successfully">Impostazioni esportate correttamente</string>
     <string name="settings_imported_successfully">Impostazioni importate correttamente</string>
+    <string name="start_name_with_surname">Prima il nome poi il cognome</string>
 
     <!-- Setting sections -->
     <string name="visibility">Visibilità</string>
