--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -520,6 +520,7 @@
     <string name="import_settings">Importuoti nustatymus</string>
     <string name="settings_exported_successfully">Settings exported successfully</string>
     <string name="settings_imported_successfully">Settings imported successfully</string>
+    <string name="start_name_with_surname">Pavardė rodoma pirma</string>
 
     <!-- Setting sections -->
     <string name="visibility">Matomumas</string>
