--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Importar definições</string>
     <string name="settings_exported_successfully">Definições exportadas com sucesso</string>
     <string name="settings_imported_successfully">Definições importadas com sucesso</string>
+    <string name="start_name_with_surname">Ordenar por apelido</string>
 
     <!-- Setting sections -->
     <string name="visibility">Exibição</string>
