--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -529,6 +529,7 @@
     <string name="import_settings">Импорт настроек</string>
     <string name="settings_exported_successfully">Настройки успешно экспортированы </string>
     <string name="settings_imported_successfully">Настройки успешно импортированы</string>
+    <string name="start_name_with_surname">Показывать сначала фамилию</string>
 
     <!-- Setting sections -->
     <string name="visibility">Отображение</string>
