--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -529,6 +529,7 @@
     <string name="import_settings">Importovať nastavenia</string>
     <string name="settings_exported_successfully">Nastavenia boli úspešne exportované</string>
     <string name="settings_imported_successfully">Nastavenia boli úspešne importované</string>
+    <string name="start_name_with_surname">Začať meno priezviskom</string>
 
     <!-- Setting sections -->
     <string name="visibility">Viditeľnosť</string>
