--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Importera inställningar</string>
     <string name="settings_exported_successfully">Inställningarna har exporterats</string>
     <string name="settings_imported_successfully">Inställningarna har importerats</string>
+    <string name="start_name_with_surname">Visa efternamn först</string>
 
     <!-- Setting sections -->
     <string name="visibility">Synlighet</string>
