--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Ayarları içe aktar</string>
     <string name="settings_exported_successfully">Ayarlar başarıyla dışa aktarıldı</string>
     <string name="settings_imported_successfully">Ayarlar başarıyla içe aktarıldı</string>
+    <string name="start_name_with_surname">Soyadı ile başla</string>
 
     <!-- Setting sections -->
     <string name="visibility">Görünürlük</string>
