--- a/commons/src/main/res/values-vi/strings.xml
+++ b/commons/src/main/res/values-vi/strings.xml
@@ -496,6 +496,7 @@
     <string name="import_settings">Nhập cài đặt</string>
     <string name="settings_exported_successfully">Cài đặt được xuất thành công</string>
     <string name="settings_imported_successfully">Cài đặt được nhập thành công</string>
+    <string name="start_name_with_surname">Start name with surname</string>
 
     <!-- Setting sections -->
     <string name="visibility">Hiển thị</string>
@@ -534,8 +535,8 @@
     </plurals>
 
     <!-- Import / Export -->
-    <string name="importing">Đang nhập... </string>
-    <string name="exporting">Đang xuất... </string>
+    <string name="importing">Đang nhập… </string>
+    <string name="exporting">Đang xuất… </string>
     <string name="importing_successful">Nhập thành công</string>
     <string name="exporting_successful">Xuất thành công</string>
     <string name="importing_failed">Nhập thất bại</string>
