--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -464,6 +464,7 @@
     <string name="import_settings">匯入設定</string>
     <string name="settings_exported_successfully">設定匯出成功</string>
     <string name="settings_imported_successfully">設定匯入成功</string>
+    <string name="start_name_with_surname">姓氏在前</string>
 
     <!-- Setting sections -->
     <string name="visibility">可見度</string>
